--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,6 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
