--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,41 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat App</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Node.js Chat App</title>
+  <style>
+    body { font-family: Arial, sans-serif; }
+    #messages { list-style-type: none; margin: 0; padding: 0; }
+    #messages li { padding: 8px; margin-bottom: 2px; background-color: #f3f3f3; }
+    #form { position: fixed; bottom: 0; width: 100%; background: #ddd; padding: 10px; }
+  </style>
 </head>
 <body>
-  <!-- Username Modal -->
-  <div id="usernameModal" class="modal">
-    <div class="modal-content">
-      <h2>Enter Your Name</h2>
-      <input type="text" id="username" placeholder="Enter your name" required>
-      <button id="saveNameBtn" class="btn">Start Chatting</button>
-    </div>
-  </div>
-
-  <div class="chat-container" id="chat-container" style="display: none;">
-    <header class="chat-header">
-      <h1>Chat App</h1>
-    </header>
-    <main class="chat-main">
-      <div class="chat-sidebar">
-        <h3>Active Users</h3>
-        <ul id="users-list"></ul>
-      </div>
-      <div class="chat-messages-container">
-        <div id="chat-messages" class="chat-messages"></div>
-      </div>
-    </main>
-    <form id="chat-form" class="chat-form">
-      <input type="text" id="msg" class="chat-input" placeholder="Enter message" required autocomplete="off">
-      <button type="submit" class="btn">Send</button>
-    </form>
-  </div>
-
+  <ul id="messages"></ul>
+  <form id="form" action="">
+    <input id="m" autocomplete="off" /><button>Send</button>
+  </form>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="script.js"></script>
+  <script>
+    var socket = io();
+    var form = document.getElementById('form');
+    var input = document.getElementById('m');
+    var messages = document.getElementById('messages');
+
+    form.addEventListener('submit', function(event) {
+      event.preventDefault();
+      if (input.value) {
+        socket.emit('chat message', input.value);
+        input.value = '';
+      }
+    });
+
+    socket.on('chat message', function(msg) {
+      var item = document.createElement('li');
+      item.textContent = msg;
+      messages.appendChild(item);
+      window.scrollTo(0, document.body.scrollHeight);
+    });
+  </script>
 </body>
 </html>
